--- a/styles.css
+++ b/styles.css
@@ -1,11 +1,113 @@
 /* Add your CSS to this file */
+
 body {
     margin: 0;
     font-size: 16px;
+    
 }
 
 .container {
     margin: 0 auto;
     max-width: 960px;
     width: 100%;
+    display: flex;
+    align-items: center;
+}
+
+header .container nav ul{
+    display: flex;
+    list-style: none; 
+    margin-left: 100%;
+}
+
+header .container nav ul a{
+    text-decoration: none;
+    margin-left: 20px;
+}
+
+
+.overview-hero-image img{
+    width: 60%;
+    height: auto; 
+
+}
+
+.overview-hero{
+    background-color: #ffece5;
+}
+
+.overview-hero-text h2{
+    white-space: nowrap;
+}
+
+.overview-hero-text p{
+    width: 140%;
+}
+
+.learn-about .container{
+    display: flex;
+    flex-direction: column;
+}
+
+.learn-about .container h2{
+    align-self: flex-start;
+    color: #48BB78;
+    font-size: 21px;
+}
+
+.cards{
+    display: grid;
+    grid-template-columns: auto auto auto;
+    grid-column-gap: 30px;
+}
+
+.card{
+    max-width:300px;
+    display: flex;
+    align-items: center;
+    flex-direction: column;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
+    padding: 10px;
+    border-radius: 6px;
+}
+
+.card img{
+    height: auto;
+    width: 95%;
+    border-radius: 6px;
+}
+
+.testing{
+    background-color: #4A5568;
+    color: white;
+}
+.testing .container{
+    margin-top: 36px;
+    padding-left: 24px;
+    padding-right: 24px;
+    padding-top: 64px;
+    padding-bottom: 64px;
+    display: flex;
+    justify-content: center;
+    gap: 128px;
+    align-items: center;
+    
+}
+.testing .container .testing-desciption{
+    width: 500px;  
+    line-height: 1.5;
+    white-space: normal;
+}
+
+.testing .container .cta .btn{
+    border-radius: 5px;
+    white-space: nowrap;
+    padding-left: 32px;
+    padding-top: 18px;
+    padding-bottom: 18px;
+    padding-right: 32px;
+    text-decoration: none;
+    margin-top: 24px;
+    background-color: #48BB78;
+    color: white;
 }
