--- a/styles.css
+++ b/styles.css
@@ -3,6 +3,7 @@
 body {
     margin: 0;
     font-size: 16px;
+    font-family: sans-serif;
     
 }
 
@@ -110,4 +111,74 @@ header .container nav ul a{
     margin-top: 24px;
     background-color: #48BB78;
     color: white;
+}
+
+.stories{
+    width: 100vw;
+    display: flex;
+    justify-content: center;
+    margin-top: 5%;
+  
+}
+.stories .container{
+    width: 70%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+
+}
+.stories .container h2{
+    align-self: flex-start;
+    margin-left: 3%;
+    color: #5A67D8;
+}
+.stories .container article h3{
+    font-size: 18px;
+}
+.stories .container article a{
+    text-decoration: none;
+    color: #5A67D8;
+    font-weight: bold;
+}
+.stories .container article{
+    align-self: flex-start;
+    display: flex;
+    width: 90%;
+    align-items: center;
+    gap: 36px;
+    padding: 36px;
+    padding-left: 0px;
+    padding-top: 0px;
+}
+.stories .container article img{
+    width:200px;
+    height: 200px;
+    border-radius: 50%;
+}
+.newsletter{
+    width: 100vw;
+    background-color: #48BB78;
+}
+.newsletter .container{
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    color: white;
+    padding: 64px;
+}
+.newsletter .container form{
+    display: flex;
+    gap:10px;
+}
+.newsletter .container input{
+    width: 300px;
+    padding: 18px;
+}
+.newsletter .container p{
+    width: 40%;
+}
+.newsletter .container button{
+    padding: 18px;
+    padding-left: 24px;
+    padding-right: 24px;
 }
