--- a/styles.css
+++ b/styles.css
@@ -20,12 +20,20 @@ header .container nav ul{
     list-style: none; 
     margin-left: 100%;
 }
+header .container h1{
+    font-size: 18px;
+}
 
 header .container nav ul a{
     text-decoration: none;
     margin-left: 20px;
+    color: #6b7280;
+    font-size: 18px;
+   
 }
-
+header .container nav ul a:hover{
+    color: #5A67D8;
+}
 
 .overview-hero-image img{
     width: 60%;
@@ -53,7 +61,7 @@ header .container nav ul a{
 .learn-about .container h2{
     align-self: flex-start;
     color: #48BB78;
-    font-size: 21px;
+    font-size: 24px;
 }
 
 .cards{
@@ -69,11 +77,14 @@ header .container nav ul a{
     flex-direction: column;
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
     padding: 10px;
-    border-radius: 6px;
+    border-radius: 5px;
 }
-
+.card .card-body h3{
+    color:#48BB78;
+    font-size: 21px;
+}
 .card img{
-    height: auto;
+    height: 60%;
     width: 95%;
     border-radius: 6px;
 }
@@ -165,20 +176,36 @@ header .container nav ul a{
     flex-direction: column;
     color: white;
     padding: 64px;
+    padding-top: 32px;
 }
 .newsletter .container form{
     display: flex;
     gap:10px;
 }
 .newsletter .container input{
+    margin-top: 16px;
     width: 300px;
     padding: 18px;
+    border-radius: 5px;
+    border: none;
+    outline: none;
 }
 .newsletter .container p{
-    width: 40%;
+    width: 48%;
+    /* border: 1px solid black; */
 }
 .newsletter .container button{
-    padding: 18px;
-    padding-left: 24px;
-    padding-right: 24px;
+    margin-top: 16px;
+    padding: 12px;
+    padding-left: 32px;
+    padding-right: 32px;
+    background-color: #5A67D8;
+    color: white;
+    border: none;
+    border-radius: 5px;
+}
+footer{
+    background-color: #4A5568;
+    color:white;
+    padding: 24px;
 }
