--- a/styles.css
+++ b/styles.css
@@ -20,6 +20,7 @@ header .container nav ul{
     list-style: none; 
     margin-left: 100%;
 }
+
 header .container h1{
     font-size: 18px;
 }
@@ -31,6 +32,7 @@ header .container nav ul a{
     font-size: 18px;
    
 }
+
 header .container nav ul a:hover{
     color: #5A67D8;
 }
@@ -79,10 +81,12 @@ header .container nav ul a:hover{
     padding: 10px;
     border-radius: 5px;
 }
+
 .card .card-body h3{
     color:#48BB78;
     font-size: 21px;
 }
+
 .card img{
     height: 60%;
     width: 95%;
@@ -95,29 +99,24 @@ header .container nav ul a:hover{
 }
 .testing .container{
     margin-top: 36px;
-    padding-left: 24px;
-    padding-right: 24px;
-    padding-top: 64px;
-    padding-bottom: 64px;
+    padding: 64px 24px;
     display: flex;
     justify-content: center;
     gap: 128px;
     align-items: center;
     
 }
-.testing .container .testing-desciption{
+
+.testing-desciption{
     width: 500px;  
     line-height: 1.5;
     white-space: normal;
 }
 
-.testing .container .cta .btn{
+.cta .btn{
     border-radius: 5px;
     white-space: nowrap;
-    padding-left: 32px;
-    padding-top: 18px;
-    padding-bottom: 18px;
-    padding-right: 32px;
+    padding: 18px 32px;
     text-decoration: none;
     margin-top: 24px;
     background-color: #48BB78;
@@ -131,6 +130,7 @@ header .container nav ul a:hover{
     margin-top: 5%;
   
 }
+
 .stories .container{
     width: 70%;
     display: flex;
@@ -138,38 +138,44 @@ header .container nav ul a:hover{
     align-items: center;
 
 }
+
 .stories .container h2{
     align-self: flex-start;
     margin-left: 3%;
     color: #5A67D8;
 }
-.stories .container article h3{
+
+.stories .container .article-body h3{
     font-size: 18px;
 }
-.stories .container article a{
+
+.stories .container .article-body a{
     text-decoration: none;
     color: #5A67D8;
     font-weight: bold;
 }
+
 .stories .container article{
     align-self: flex-start;
     display: flex;
     width: 90%;
     align-items: center;
     gap: 36px;
-    padding: 36px;
-    padding-left: 0px;
-    padding-top: 0px;
+    padding: 0px 36px 36px 0px;
+
 }
+
 .stories .container article img{
     width:200px;
     height: 200px;
     border-radius: 50%;
 }
+
 .newsletter{
     width: 100vw;
     background-color: #48BB78;
 }
+
 .newsletter .container{
     width: 100%;
     display: flex;
@@ -178,11 +184,13 @@ header .container nav ul a:hover{
     padding: 64px;
     padding-top: 32px;
 }
+
 .newsletter .container form{
     display: flex;
     gap:10px;
 }
-.newsletter .container input{
+
+#email{
     margin-top: 16px;
     width: 300px;
     padding: 18px;
@@ -190,20 +198,20 @@ header .container nav ul a:hover{
     border: none;
     outline: none;
 }
+
 .newsletter .container p{
     width: 48%;
-    /* border: 1px solid black; */
 }
+
 .newsletter .container button{
     margin-top: 16px;
-    padding: 12px;
-    padding-left: 32px;
-    padding-right: 32px;
+    padding: 12px 32px 12px 32px;
     background-color: #5A67D8;
     color: white;
     border: none;
     border-radius: 5px;
 }
+
 footer{
     background-color: #4A5568;
     color:white;
